--- a/.github/workflows/load-test.yml
+++ b/.github/workflows/load-test.yml
@@ -34,4 +34,4 @@ jobs:
         run: k6 version
 
       - name: Executar testes de carga
-        run: k6 run load-test.js
+        run: k6 run load_test.js
